Initial HTML project upload

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmed Saad - Professional Portfolio</title>
+    <title>Ahmad Saad - Professional Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
@@ -798,7 +798,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo"><i class="fas fa-user-tie"></i>Ahmed <span>Saad</span></a>
+                <a href="#" class="logo"><i class="fas fa-user-tie"></i>Ahmad <span>Saad</span></a>
                 <div class="mobile-toggle">
                     <i class="fas fa-bars"></i>
                 </div>
@@ -818,14 +818,14 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Ahmed Saad</h1>
+                    <h1>Ahmad Saad</h1>
                     <h2>Finance Executive & Educator</h2>
                     <p>Associate Member of ICAP, Fellow Member of PIPFA, and seasoned professional with over 18 years of experience in financial leadership, advisory, and education.</p>
                     <a href="mailto:ahmadsaad@hrstotal.com" class="btn">Get In Touch <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="profile-img">
                     <!-- Dummy profile image -->
-                    <img src="sliderimg.png" alt="Ahmed Saad">
+                    <img src="sliderimg.png" alt="Ahmad Saad">
                 </div>
             </div>
         </div>
@@ -966,7 +966,7 @@
             <h2>Get In Touch</h2>
             <div class="contact-info">
                 <div>
-                    <h3>Connect with Ahmed Saad</h3>
+                    <h3>Connect with Ahmad Saad</h3>
                     <p>For professional inquiries, speaking engagements, or consultation services, please reach out through the following channels:</p>
                     
                     <div class="contact-item">
@@ -1020,7 +1020,7 @@
         <div class="container">
             <div class="footer-content">
                 <div>
-                    <h3 style="color: white;">Ahmed Saad</h3>
+                    <h3 style="color: white;">Ahmad Saad</h3>
                     <p>Finance Executive | Educator | Founder</p>
                     <p style="margin-top: 15px; color: rgba(255,255,255,0.8);">
                         <i class="fas fa-envelope" style="margin-right: 10px; color: #f472b6;"></i>
@@ -1034,7 +1034,7 @@
                 </ul>
             </div>
             <div class="copyright">
-                <p>&copy; Ahmed Saad. All rights reserved.</p>
+                <p>&copy; Ahmad Saad. All rights reserved.</p>
             </div>
         </div>
     </footer>
